--- a/layouts/default/sass/carmel/_forms.scss
+++ b/layouts/default/sass/carmel/_forms.scss
@@ -1,6 +1,6 @@
 @mixin input () {
   height:47px;
-  margin:1.5rem 0;
+  margin: 0;
   padding: 1rem 0.5rem;
   font-size: 1.2rem;
   font-family: $carmel-font-sans, sans-serif;
@@ -8,13 +8,16 @@
 
   @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
     height:47px;
+    margin: 1.5rem 0;
   }
 
   @media screen and (min-width: $screen-md-min) and (max-width: $screen-md-max) {
     height:63px;
+    margin: 1.5rem 0;
   }
 
   @media screen and (min-width: $screen-lg-min) {
     height:71px;
+    margin: 1.5rem 0;
   }
 }
