--- a/layouts/default/sass/carmel/_typography.scss
+++ b/layouts/default/sass/carmel/_typography.scss
@@ -46,4 +46,5 @@ h2 {
 p {
   @extend %carmel-text-base;
   text-align:   justify;
+  line-height: 2.0rem;
 }
